Fixed bug of text overflowing from cards on walk with us page on medium sized screens. Updated To do list and added HTML Formatter to programs used in readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -573,6 +573,11 @@ a:hover{
         font-size: 15px;
     }
 
+    .location-card p{
+        padding: 0 5px;
+        font-size: 14px;
+    }
+
     .card-button .btn-blue {
         width: 45%;
     }
